--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
