--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
     "framer-motion": "^10.13.0",
     "nanoid": "^4.0.2",
